migrations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: migrations
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: migrations
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f resolved.yaml convert
        kompose.version: 1.23.0 (bc7d9f4f)
      creationTimestamp: null
      labels:
        io.kompose.network/cardbox: "true"
        io.kompose.service: migrations
    spec:
      containers:
        - env:
            - name: DATABASE_HOST
              value: database
            - name: DATABASE_URL
              value: postgres://cardbox:cardbox@database/cardbox_dev
            - name: POSTGRES_DB
              value: cardbox_dev
            - name: POSTGRES_PASSWORD
              value: cardbox
            - name: POSTGRES_USER
              value: cardbox
          image: ghcr.io/cardbox/backend/migrations:pr-40
          name: migrations
          resources: {}
      restartPolicy: Always
status: {}
