postgresql-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f resolved.yaml convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql-exporter
  name: postgresql-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql-exporter
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f resolved.yaml convert
        kompose.version: 1.23.0 (bc7d9f4f)
      creationTimestamp: null
      labels:
        io.kompose.network/cardbox: "true"
        io.kompose.service: postgresql-exporter
    spec:
      containers:
        - env:
            - name: DATA_SOURCE_NAME
              value: postgresql://cardbox:cardbox@database/cardbox_dev?sslmode=disable
          image: quay.io/prometheuscommunity/postgres-exporter
          name: postgresql-exporter
          ports:
            - containerPort: 9187
          resources: {}
      restartPolicy: Always
status: {}
