tempo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f resolved.yaml convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: tempo
  name: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tempo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f resolved.yaml convert
        kompose.version: 1.23.0 (bc7d9f4f)
      creationTimestamp: null
      labels:
        io.kompose.network/cardbox: "true"
        io.kompose.service: tempo
    spec:
      containers:
        - args:
            - -config.file=/etc/tempo.yaml
          image: grafana/tempo:latest
          name: tempo
          ports:
            - containerPort: 14268
            - containerPort: 3100
            - containerPort: 55680
            - containerPort: 9411
          resources: {}
          volumeMounts:
            - mountPath: /etc/tempo.yaml
              name: tempo-claim0
            - mountPath: /tmp/tempo
              name: tempo-claim1
      restartPolicy: Always
      volumes:
        - name: tempo-claim0
          persistentVolumeClaim:
            claimName: tempo-claim0
        - name: tempo-claim1
          persistentVolumeClaim:
            claimName: tempo-claim1
status: {}
