postgresql-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f resolved.yaml convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql-exporter
  name: postgresql-exporter
spec:
  ports:
    - name: "9187"
      port: 9187
      targetPort: 9187
  selector:
    io.kompose.service: postgresql-exporter
status:
  loadBalancer: {}
