tempo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f resolved.yaml convert
    kompose.version: 1.23.0 (bc7d9f4f)
  creationTimestamp: null
  labels:
    io.kompose.service: tempo
  name: tempo
spec:
  ports:
    - name: "14268"
      port: 14268
      targetPort: 14268
    - name: "3100"
      port: 3100
      targetPort: 3100
    - name: "55680"
      port: 55680
      targetPort: 55680
    - name: "55681"
      port: 55681
      targetPort: 55681
    - name: "9411"
      port: 9411
      targetPort: 9411
  selector:
    io.kompose.service: tempo
status:
  loadBalancer: {}
