vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f resolved.yaml convert
    kompose.version: 1.23.0 (bc7d9f4f)
    traefik.enable: "true"
    traefik.http.routers.vault.middlewares: add-ui
    traefik.http.routers.vault.rule: Host(`vault.vetro.me`)
    traefik.http.routers.vault.tls: "true"
    traefik.http.routers.vault.tls.certresolver: le
  creationTimestamp: null
  labels:
    io.kompose.service: vault
  name: vault
spec:
  ports:
    - name: "8200"
      port: 8200
      targetPort: 8200
  selector:
    io.kompose.service: vault
status:
  loadBalancer: {}
